Enhance LLM ensemble with MongoDB integration and dotenv support. Updated .gitignore to include .env and run/ directories, added dotenv as a dependency, modified LLMModelConfig to dynamically determine provider, and implemented MongoDB client for logging responses in LLMEnsemble.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "numpy>=1.22.0",
     "tqdm>=4.64.0",
     "flask",
+    "dotenv>=0.9.9",
 ]
 
 [project.optional-dependencies]
